--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 # Environment variables declared in this file are automatically made available to Prisma.
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 
-DATABASE_URL=
-NEXTAUTH_SECRET=
+DATABASE_URL=mongodb+srv://duzgunberke:r5NRfi5OwdAyVNj1@messenger.ulvgxtt.mongodb.net/todo?ssl=true&authSource=admin
+NEXTAUTH_SECRET=35cca0bc15298304f85127d2e1965077
 
-NEXT_PUBLIC_PUSHER_APP_KEY=
-PUSHER_APP_ID=
-PUSHER_SECRET=
+NEXT_PUBLIC_PUSHER_APP_KEY=7034a9729d943a478afd
+PUSHER_APP_ID=1608403
+PUSHER_SECRET=06e031cebc4e6b9313cf
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
 
